--- a/CSS/stylesheets.css
+++ b/CSS/stylesheets.css
@@ -8,7 +8,7 @@
 	margin: 0;
 }
 
-html {
+html {2
 	scroll-behavior: smooth;
 }
 
@@ -33,11 +33,31 @@ nav a {
 .hero {
 	width: 100vw;
 	height: 100vh;
-	background: url(../media/bg373737.svg) no-repeat top;
-	background-size: cover;
 	justify-content: center;
 	align-items: center;
 	text-align: center;
 	font-size: 2.0rem;
+} 
+
+.hero-text::before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: -1;
+	width: 100%;
+	height: 100%;
+	background: url(../media/bg373737.svg) no-repeat top;
+	background-color: var(--white);
+	background-size: cover;
+	/* background-clip: text; */
 }
 
+.hero-text {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	color: transparent;
+}
+
+/* filter: invert(99%) sepia(0%) saturate(7478%) hue-rotate(192deg) brightness(120%) contrast(87%); */
