--- a/CSS/stylesheets.css
+++ b/CSS/stylesheets.css
@@ -8,12 +8,11 @@
 	margin: 0;
 }
 
-html {2
+html {
 	scroll-behavior: smooth;
 }
 
 body {
-	/* background: url(../media/bg373737.svg) no-repeat;  */
 	color: var(--white);
 	font-size: 1.0rem;
 	font-family: 'Roboto Mono', monospace;
@@ -23,7 +22,10 @@ body {
 
 .flex {
     display: flex;
-    justify-content: space-between;
+}
+
+.menu {
+	justify-content: space-between;
 }
 
 nav a {
@@ -33,10 +35,9 @@ nav a {
 .hero {
 	width: 100vw;
 	height: 100vh;
-	justify-content: center;
-	align-items: center;
 	text-align: center;
-	font-size: 2.0rem;
+	font-size: 3rem;
+	margin-top: -50px;
 } 
 
 .hero-text::before {
@@ -47,17 +48,30 @@ nav a {
 	z-index: -1;
 	width: 100%;
 	height: 100%;
-	background: url(../media/bg373737.svg) no-repeat top;
+	background: url(../media/bg373737.png) no-repeat;
 	background-color: var(--white);
 	background-size: cover;
-	/* background-clip: text; */
 }
 
 .hero-text {
 	position: relative;
 	width: 100%;
 	height: 100%;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+
 	color: transparent;
+	background: url(../media/bg373737-white.png) no-repeat;
+	background-color: var(--black);
+	background-size: cover;
+	-webkit-background-clip: text;
+	background-clip: text;
+}
+
+.hero-text p {
+	font-size: 1.5rem;
+	width: 50%;
 }
 
 /* filter: invert(99%) sepia(0%) saturate(7478%) hue-rotate(192deg) brightness(120%) contrast(87%); */
